--- a/credentials.gradle
+++ b/credentials.gradle
@@ -1,4 +1,6 @@
 def serverConfig = [:]
-serverConfig.url = "http://localhost:8080"
+serverConfig.localhost = "http://localhost:8080"
+//serverConfig.emulatorLocalhost = "http://10.0.2.2:8080"
+serverConfig.emulatorLocalhost = "http://192.168.100.105:8080"
 
 ext.serverConfig = serverConfig
